www/style/style.css
html, body {
  overflow: hidden;
  height: 100%;
  margin: 0;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

#map-left {
  position: absolute;
  top:0; right:0; bottom:0; left:0;
}

#map-right {
  position: absolute;
  top:0; right:0; bottom:0; left:0;
}

#mask-left {
  position:absolute;
  top:0; right:0; bottom:0; left:0;
  overflow: hidden;
}

#handle {
  cursor: ew-resize;
  position: absolute;
  top:0; bottom:0; left: 50%;
  padding: 0 10px 0 10px;
}
#handle > div {
  border-left: 1px dashed #333;
  position: absolute;
  top:0; bottom:0; left: 50%;
}

